--- a/TopGroup/app/src/main/res/values/strings.xml
+++ b/TopGroup/app/src/main/res/values/strings.xml
@@ -24,11 +24,27 @@
     <string name="app_login">登陆</string>
     <string name="app_username">账户：</string>
     <string name="app_password">密码：</string>
-    <string name="edt_un">用户名：</string>
-    <string name="edt_pw">密码：</string>
+    <string name="edt_un">用户名</string>
+    <string name="edt_pw">密码</string>
     <string name="edt_count">可尝试的剩余次数:</string>
     <string name="dig_right">用户名密码正确</string>
     <string name="dig_wrong">用户名密码错误</string>
 
     <string name="register">新用户注册</string>
+
+    <!--register-->
+    <string name="r_ac">账号</string>
+    <string name="r_pw">密码</string>
+    <string name="r_pw2">确认密码</string>
+    <string name="r_nn">昵称</string>
+    <string name="r_gd">性别</string>
+    <string name="r_btn">注册</string>
+    <string name="r_rbn2">女</string>
+    <string name="r_rbn1">男</string>
+    <string name="r_ac_hint">账户名可使用不超过10字符的字母和数字</string>
+    <string name="r_pw_hint">密码可使用不超过12字符的字母和数字</string>
+    <string name="r_pw2_hint">应与上面填写的密码一致</string>
+    <string name="r_nn_hint">昵称可使用不超过10字符的中英文及数字</string>
+    <string name="inputtype">abcdefghijklmnopqrstupwxyzABCDEFGHIJKLMNOPQRSTUPWXYZ0123456789</string>
+
 </resources>
